# mini-learning

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  jest.config.js  package.json  tsconfig.json
docs/: .gitignore  AUTH_INFO.md  COMPARISON.md  EXPLANATION.md  EXTRA_LEARN.md  EXTRA_STEPS.md  LEARN.md
express/: .dockerignore  .env.example  .gitignore  AUDIT.md  docker-compose.yml  drizzle.config.ts  package.json
express-mongo/: .env.example  Dockerfile  README.md  docker-compose.yml  eslint.config.js  jest.config.js  package.json  tsconfig.json
express-mongo/docs/: AUTH_INFO.md  LEARN.md  MONGODB_VS_POSTGRES.md  PATTERNS.md
express-mongo/src/: app.ts  server.ts
express-mongo/tests/: setup.ts
express/docs/: LEARN.md  TOPICS.md
express/src/: app.ts
fastapi/: .env.example  Dockerfile  docker-compose.yml  pyproject.toml
fastapi/alembic/: env.py
fastapi/src/: dependencies.py
fastapi/src/api/routes/: health.py
fastapi/src/db/: repositories.py
fastapi/src/services/: cache_service.py
nest/: .env.example  .gitignore  CONTRIBUTING.md  README.md  docker-compose.yml  drizzle.config.ts  package.json  tsconfig.json
nest/docs/: LEARN.md  NEST_VS_EXPRESS.md
nest/src/: app.module.ts
next-express-graphql/: .gitignore  README.md  docker-compose.yml
next-express-graphql/backend/: .env.example  (+3 more)
next-supabase/: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  next.config.ts  package.json  playwright.config.ts  tsconfig.tsbuildinfo  vitest.config.ts
payload/: .env.docker  .env.example  .gitignore  .pnp.cjs  AUTH_INFO.md  Dockerfile  LEARN.md  README.md  STORAGE.md  docker-compose.yml  eslint.config.mjs  next.config.ts  package.json  payload.config.ts  tsconfig.tsbuildinfo  vitest.config.ts
spring/: README.md
spring-lombok/: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  pom.xml
src/: __init__.py  main.py  main.ts  server.ts
tanstack-start/: .env.example  .gitignore  .pnp.cjs  .yarnrc.yml  AUTH_INFO.md  CONTRIBUTING.md  Dockerfile  LEARN.md  README.md  docker-compose.yml  package.json  tsconfig.json  vite.config.ts
tests/: test_auth.py
(+309 files in other folders)
